[package]
name = "rust-worker-demo"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

[lib]
# We're exporting a rust library
crate-type = ["cdylib", "rlib"]

[dependencies]
# Allocator and panic hook
cfg-if = "0.1.2"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

# For calling to and from JS code,
# and to deal with general concurrency
wasm-bindgen = "=0.2.65"
wasm-bindgen-futures = "0.4"
futures = "0.3"

# For parsing urls and rendering markdown
url = "1.7"
pulldown-cmark = { version = "0.8", default-features = false }

# For interacting with JS
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
  'FormData',
  'Request',
  'FetchEvent',
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell rustc to optimize for small code size.
opt-level = "s"
