[package]
name = "rust-worker-template"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "=0.2.65"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
url = "1.7"
js-sys = "0.3"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ['Request']

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
